--- a/config/locale/en.json
+++ b/config/locale/en.json
@@ -28,23 +28,29 @@
     "The instance type for this node to run, such as high performance, high performance plus": "The instance type for this node to run, such as high performance, high performance plus",
     "The volume size for this client node": "The volume size for this client node",
     "Docker service properties": "Docker service properties",
-    "The location of Docker registry server": "The location of Docker registry server",
-    "The location of Docker registry server, Docker hub or qingcloud": "The location of Docker registry server, Docker hub or qingcloud",
     "The location of Docker mirror registry server": "The location of Docker mirror registry server",
     "The location of Docker mirror registry server, currently only support offcial DockerHub registration server": "The location of Docker mirror registry server, currently only support offcial DockerHub registration server",
     "User name": "User name",
     "User name to access Docker registry server": "User name to access Docker registry server",
     "Password": "Password",
     "Password to access Docker registry server": "Password to access Docker registry server",
-    "Image Id": "Image Id",
-    "Docker image id on Docker registration server": "Docker image id on Docker registration server",
-    "Docker tag for pull request": "Docker tag for pull request",
-    "Docker tag for pull request, will pull latest image if nothing input": "Docker tag for pull request, will pull latest image if nothing input",
-    "Docker tag for upgrade request": "Docker tag for upgrade request",
-    "Docker tag for upgrade request, will be treated as latest image if nothing input": "Docker tag for upgrade request, will be treated as latest image if nothing input",
+    "This pull URL is secure or not": "This pull URL is secure or not",
+    "This pull URL is secure or not, will add domain to insecure-registries if choosing 'no'": "This pull URL is secure or not, will add domain to insecure-registries if choosing 'no'",
+    "URL for pull request": "URL for pull request",
+    "URL for pull request, for example, dockerhub.qingcloud.com/guest/image:tag": "URL for pull request, for example, dockerhub.qingcloud.com/guest/image:tag",
+    "The executed command when starting a Docker container": "The executed command when starting a Docker container",
+    "The executed command when starting a Docker container, only for the image which has ENTRYPOINT but no CMD": "The executed command when starting a Docker container, only for the image which has ENTRYPOINT but no CMD",
+    "This upgrade URL is secure or not": "This upgrade URL is secure or not",
+    "This upgrade URL is secure or not, will add domain to insecure-registries if choosing 'no'": "This upgrade URL is secure or not, will add domain to insecure-registries if choosing 'no'",
+    "URL for upgrade request": "URL for upgrade request",
+    "URL for upgrade request, for example, dockerhub.qingcloud.com/guest/image:tag": "URL for upgrade request, for example, dockerhub.qingcloud.com/guest/image:tag",
     "Volume path": "Volume path",
     "Volume path in running container, which will be mapped with '/data/docker_data' folder on host node, please input as full path": "Volume path in running container, which will be mapped with '/data/docker_data' folder on host node, please input as full path",
     "Port": "Port",
     "Port exposed by running container, which will be mapped with '80' port on host node": "Port exposed by running container, which will be mapped with '80' port on host node",
+    "IP address of Elastic Search server": "IP address of Elastic Search server",
+    "IP address of Elastic Search server, leave it empty if you don't need Elastic Search server to manage trace": "IP address of Elastic Search server, leave it empty if you don't need Elastic Search server to manage trace",
+    "Port of Elastic Search server": "Port of Elastic Search server",
+    "Port of Elastic Search server,  leave it empty if you don't need Elastic Search server to manage trace": "Port of Elastic Search server,  leave it empty if you don't need Elastic Search server to manage trace",
     "upgrade image": "upgrade image"
 }
