--- a/config/locale/zh-cn.json
+++ b/config/locale/zh-cn.json
@@ -28,23 +28,29 @@
     "The instance type for this node to run, such as high performance, high performance plus": "当前客户端节点实例类型，比如性能型与超高性能型",    
     "The volume size for this client node": "当前客户端节点的磁盘大小",
     "Docker service properties": "Docker 服务参数",
-    "The location of Docker registry server": "Docker 镜像仓库服务器地址",
-    "The location of Docker registry server, Docker hub or qingcloud": "Docker 镜像仓库服务器地址, 目前支持 DockerHub 官方服务器和 dockerhub.qingcloud.com",
     "The location of Docker mirror registry server": "Docker 备用镜像仓库服务器地址",
     "The location of Docker mirror registry server, currently only support offcial DockerHub registration server": "Docker 备用镜像仓库服务器地址，仅对 DockerHub 官方服务器有效",
     "User name": "用户名",
     "User name to access Docker registry server": "访问 Docker 镜像服务器的用户名",
     "Password": "密码",
     "Password to access Docker registry server": "访问 Docker 镜像服务器的密码",
-    "Image Id": "镜像 Id",
-    "Docker image id on Docker registration server": "Docker 镜像服务器上的镜像 id",
-    "Docker tag for pull request": "拉取镜像的 Docker 标签（Tag）",
-    "Docker tag for pull request, will pull latest image if nothing input": "用于镜像拉取请求的 Docker 标签（Tag），如留空，则默认拉取最新镜像",
-    "Docker tag for upgrade request": "更新镜像的 Docker 标签（Tag）",
-    "Docker tag for upgrade request, will be treated as latest image if nothing input": "用于镜像拉取请求的 Docker 标签（Tag），如留空，则默认升级为最新镜像",
+    "This pull URL is secure or not": "用于拉取镜像的 URL 是否安全",
+    "This pull URL is secure or not, will add domain to insecure-registries if choosing 'no'": "用于拉取镜像的 URL 是否安全，选择否会将 domain 添加进 insecure-registries 参数中",
+    "URL for pull request": "用于拉取镜像的 URL",
+    "URL for pull request, for example, dockerhub.qingcloud.com/guest/image:tag": "用于拉取镜像的 URL，例如：dockerhub.qingcloud.com/guest/image:tag",
+    "The executed command when starting a Docker container": "启动容器时运行的命令",
+    "The executed command when starting a Docker container, only for the image which has ENTRYPOINT but no CMD": "启动容器时运行的命令，适用于仅配置了 ENTRYPOINT 但没有 CMD 的镜像",
+    "This upgrade URL is secure or not": "用于升级镜像的 URL 是否安全",
+    "This upgrade URL is secure or not, will add domain to insecure-registries if choosing 'no'": "用于升级镜像的 URL 是否安全，选择否会将 domain 添加进 insecure-registries 参数中",
+    "URL for upgrade request": "用于升级镜像的 URL",
+    "URL for upgrade request, for example, dockerhub.qingcloud.com/guest/image:tag": "用于升级镜像的 URL，例如：dockerhub.qingcloud.com/guest/image:tag",
     "Volume path": "挂载卷路径",
     "Volume path in running container, which will be mapped with '/data/docker_data' folder on host node, please input as full path": "当前运行中的容器内的挂载卷的路径，将被挂载于主机的 /data/docker_data 目录上，请输入全路径",
     "Port": "端口",
     "Port exposed by running container, which will be mapped with '80' port on host node": "当前运行中的容器所暴露的端口，将与主机节点的 80 端口关联",
+    "IP address of Elastic Search server": "Elastic Search 服务器的地址",
+    "IP address of Elastic Search server, leave it empty if you don't need Elastic Search server to manage trace": "Elastic Search 服务器的地址，如不使用 Elastic Search 管理日志，可为空",
+    "Port of Elastic Search server": "Elastic Search 服务器的端口",
+    "Port of Elastic Search server,  leave it empty if you don't need Elastic Search server to manage trace": "Elastic Search 服务器的端口，如不使用 Elastic Search 管理日志，可为空",
     "upgrade image": "镜像升级"
 }
