address review comment from jole

--- a/config/locale/en.json
+++ b/config/locale/en.json
@@ -31,9 +31,9 @@
     "The location of Docker mirror registry server": "The location of Docker mirror registry server",
     "The location of Docker mirror registry server, currently only support offcial DockerHub registration server": "The location of Docker mirror registry server, currently only support offcial DockerHub registration server",
     "User name": "User name",
-    "User name to access Docker registry server": "User name to access Docker registry server",
+    "User name to access Docker registry server, will use guest account if leaving it empty, guest accout is supported by offical dockerhub site and dockerhub.qingcloud.com": "User name to access Docker registry server, will use guest account if leaving it empty, guest accout is supported by offical dockerhub site and dockerhub.qingcloud.com",
     "Password": "Password",
-    "Password to access Docker registry server": "Password to access Docker registry server",
+    "Password to access Docker registry server, will use guest account if leaving it empty, guest accout is supported by offical dockerhub site and dockerhub.qingcloud.com": "Password to access Docker registry server, will use guest account if leaving it empty, guest accout is supported by offical dockerhub site and dockerhub.qingcloud.com",
     "This pull URL is secure or not": "This pull URL is secure or not",
     "This pull URL is secure or not, will add domain to insecure-registries if choosing 'no'": "This pull URL is secure or not, will add domain to insecure-registries if choosing 'no'",
     "URL for pull request": "URL for pull request",
@@ -45,7 +45,7 @@
     "URL for upgrade request": "URL for upgrade request",
     "URL for upgrade request, for example, dockerhub.qingcloud.com/guest/image:tag": "URL for upgrade request, for example, dockerhub.qingcloud.com/guest/image:tag",
     "Volume path": "Volume path",
-    "Volume path in running container, which will be mapped with '/data/docker_data' folder on host node, please input as full path": "Volume path in running container, which will be mapped with '/data/docker_data' folder on host node, please input as full path",
+    "Volume path in running container, which will be mapped with '/data/docker_data' folder on host node, please input the full path": "Volume path in running container, which will be mapped with '/data/docker_data' folder on host node, please input the full path",
     "Port": "Port",
     "Port exposed by running container, which will be mapped with '80' port on host node": "Port exposed by running container, which will be mapped with '80' port on host node",
     "IP address of Elastic Search server": "IP address of Elastic Search server",
