--- a/config/locale/zh-cn.json
+++ b/config/locale/zh-cn.json
@@ -31,9 +31,9 @@
     "The location of Docker mirror registry server": "Docker 备用镜像仓库服务器地址",
     "The location of Docker mirror registry server, currently only support offcial DockerHub registration server": "Docker 备用镜像仓库服务器地址，仅对 DockerHub 官方服务器有效",
     "User name": "用户名",
-    "User name to access Docker registry server": "访问 Docker 镜像服务器的用户名",
+    "User name to access Docker registry server, will use guest account if leaving it empty, guest accout is supported by offical dockerhub site and dockerhub.qingcloud.com": "访问 Docker 镜像服务器的用户名，如不填将使用 guest 账户，dockerhub 官网和 dockerhub.qingcloud.com 支持 guest 账户",
     "Password": "密码",
-    "Password to access Docker registry server": "访问 Docker 镜像服务器的密码",
+    "Password to access Docker registry server, will use guest account if leaving it empty, guest accout is supported by offical dockerhub site and dockerhub.qingcloud.com": "访问 Docker 镜像服务器的密码，如不填将使用 guest 账户，dockerhub 官网和 dockerhub.qingcloud.com 支持 guest 账户",
     "This pull URL is secure or not": "用于拉取镜像的 URL 是否安全",
     "This pull URL is secure or not, will add domain to insecure-registries if choosing 'no'": "用于拉取镜像的 URL 是否安全，选择否会将 domain 添加进 insecure-registries 参数中",
     "URL for pull request": "用于拉取镜像的 URL",
@@ -45,7 +45,7 @@
     "URL for upgrade request": "用于升级镜像的 URL",
     "URL for upgrade request, for example, dockerhub.qingcloud.com/guest/image:tag": "用于升级镜像的 URL，例如：dockerhub.qingcloud.com/guest/image:tag",
     "Volume path": "挂载卷路径",
-    "Volume path in running container, which will be mapped with '/data/docker_data' folder on host node, please input as full path": "当前运行中的容器内的挂载卷的路径，将被挂载于主机的 /data/docker_data 目录上，请输入全路径",
+    "Volume path in running container, which will be mapped with '/data/docker_data' folder on host node, please input the full path": "当前运行中的容器内的挂载卷的路径，将被挂载于主机的 /data/docker_data 目录上，请输入全路径",
     "Port": "端口",
     "Port exposed by running container, which will be mapped with '80' port on host node": "当前运行中的容器所暴露的端口，将与主机节点的 80 端口关联",
     "IP address of Elastic Search server": "Elastic Search 服务器的地址",
