app based on ubuntu image

--- a/config/locale/en.json
+++ b/config/locale/en.json
@@ -31,9 +31,9 @@
     "The location of Docker mirror registry server": "The location of Docker mirror registry server",
     "The location of Docker mirror registry server, currently only support offcial DockerHub registration server": "The location of Docker mirror registry server, currently only support offcial DockerHub registration server",
     "User name": "User name",
-    "User name to access Docker registry server, will use guest account if leaving it empty, guest accout is supported by offical dockerhub site and dockerhub.qingcloud.com": "User name to access Docker registry server, will use guest account if leaving it empty, guest accout is supported by offical dockerhub site and dockerhub.qingcloud.com",
+    "User name to access Docker registry server, leaving it empty if choosing public repository and image": "User name to access Docker registry server, leaving it empty if choosing public repository and image",
     "Password": "Password",
-    "Password to access Docker registry server, will use guest account if leaving it empty, guest accout is supported by offical dockerhub site and dockerhub.qingcloud.com": "Password to access Docker registry server, will use guest account if leaving it empty, guest accout is supported by offical dockerhub site and dockerhub.qingcloud.com",
+    "Password to access Docker registry server, leaving it empty if choosing public repository and image": "Password to access Docker registry server, leaving it empty if choosing public repository and image",
     "This pull URL is secure or not": "This pull URL is secure or not",
     "This pull URL is secure or not, will add domain to insecure-registries if choosing 'no'": "This pull URL is secure or not, will add domain to insecure-registries if choosing 'no'",
     "URL for pull request": "URL for pull request",
