--- a/config/locale/zh-cn.json
+++ b/config/locale/zh-cn.json
@@ -31,9 +31,9 @@
     "The location of Docker mirror registry server": "Docker 备用镜像仓库服务器地址",
     "The location of Docker mirror registry server, currently only support offcial DockerHub registration server": "Docker 备用镜像仓库服务器地址，仅对 DockerHub 官方服务器有效",
     "User name": "用户名",
-    "User name to access Docker registry server, will use guest account if leaving it empty, guest accout is supported by offical dockerhub site and dockerhub.qingcloud.com": "访问 Docker 镜像服务器的用户名，如不填将使用 guest 账户，dockerhub 官网和 dockerhub.qingcloud.com 支持 guest 账户",
+    "User name to access Docker registry server, leaving it empty if choosing public repository and image": "访问 Docker 镜像服务器的用户名，如使用公开仓库和镜像则不用填写",
     "Password": "密码",
-    "Password to access Docker registry server, will use guest account if leaving it empty, guest accout is supported by offical dockerhub site and dockerhub.qingcloud.com": "访问 Docker 镜像服务器的密码，如不填将使用 guest 账户，dockerhub 官网和 dockerhub.qingcloud.com 支持 guest 账户",
+    "Password to access Docker registry server, leaving it empty if choosing public repository and image": "访问 Docker 镜像服务器的密码，如使用公开仓库和镜像则不用填写",
     "This pull URL is secure or not": "用于拉取镜像的 URL 是否安全",
     "This pull URL is secure or not, will add domain to insecure-registries if choosing 'no'": "用于拉取镜像的 URL 是否安全，选择否会将 domain 添加进 insecure-registries 参数中",
     "URL for pull request": "用于拉取镜像的 URL",
